@@ -427,18 +427,22 @@ namespace OpenBabel
   - SpaceGroup - Handle crystallographic space group symmetry.
   - AliasData - Handle atoms which serve as "aliases" for larger fragments
   for example in drawing programs - "COOH" vs. four atoms for the carboxylic
-  acid.
+  acid. Currently used for MDL 2D files.
   - OBGridData - Store and process numeric grid data involved with orbitals or 
   electrostatic potential.
   - OBBuilder - New class to handle generation of 3D coordinates for SMILES,
   InChI and other formats.
+  - OBForceField - Revised, improved class, including use of constraints.
+  - OBMoleculeFormat - Installed by default, to facilitate new format development.
+  - OBLocale - New class to ensure chemical data is read in the "C" numeric locale.
+  - OBPhModel - Now accepts pH-dependent transformations.
 
   In addition, a wide variety of plugins are available, including MMFF94 
   and UFF force fields, SMARTS-based descriptors for filtering data sets,
   compound descriptors such as the Lipinsky Rule of Five, and chemical 
   transformations.
 
-  Optional headers include integration with the RDKit library.
+  Optional headers include integration with the Boost Graph Library.
 
   \page changes21 What's New in Version 2.1
 
